tests/errors/compiler/no_field_in_enum/no_field_in_enum_1.c
enum Color : int
{
	red = 5,
	green,
	blue
};

int main()
{
	enum Color clr = yellow;
	return 0;
}
